1.2.5i6p1:
    Checks & Agents:
    * 1478 FIX: kernel.util, statgrab_cpu: fix computation of utilization...

    Multisite:
    * 1164 FIX: Fixed links from servicegroup overviews to single servicegroups

    WATO:
    * 1165 FIX: Fixed exception in service discovery of logwatch event console forwarding checks...


1.2.5i6:
    Core & Setup:
    * 1008 Overall check timeout for Check_MK checks now defaults to CRIT state...
    * 1373 SEC: Do not ouput complete command line when datasource programs fail...
    * 1425 New section header option "encoding" for agent output...
    * 1129 FIX: Windows MSI-Installer: some systems created corrupted check_mk_agent.msi files...
    * 1426 FIX: windows agent: logwatch: no longer reports incorrect formatted texts (japanese characters)...
    * 1429 FIX: Disabled snmp checktypes are now sorted out before Check_MK contacts the snmp host...

    Checks & Agents:
    * 0185 knuerr_rms_humidity, knuerr_rms_temp: Two new Checks to Monitor the Temperature and the Humidity on Knürr RMS Devices
    * 1065 heartbeat_crm / heartbeat_crm.resources: Rewrote checks / formalized parameters...
    * 1068 livedump: Added optional check interval (detect staleness) / option to encrypt mails...
    * 1093 windows agent: performance counter can now be specified by name...
    * 0189 docsis_channels: Support for Frequency of Downstream Channels for Devices with DOCSIS MIB
    * 0190 docsis_channels_upstream: New check for monitoring upstream channels on cable modems with DOCSIS MIB
    * 0193 docsis_cm_status: New Check Status Check for Cable Modems with Docsis MIB.
    * 1070 printer_input/printer_output: New checks to monitor input/output sub-units of printers...
    * 0196 esx_vsphere_hostsystem: New subcheck for maintenance mode...
    * 0197 check_uniserv: New Check for Uniserv Data Management Services...
    * 0199 veeam_client: Check rewritten to get a nicer output